sqlite/sqlite3/sqlite3.h

typedef struct sqlite3 sqlite3;
typedef sqlite_int64 sqlite3_int64;
SQLITE_API int sqlite3_close(sqlite3*);
#define SQLITE_ROW         100  
SQLITE_API int sqlite3_initialize(void);
SQLITE_API void *sqlite3_malloc(int);
SQLITE_API int sqlite3_open(
  const char *filename,   
  sqlite3 **ppDb          
);
typedef struct sqlite3_stmt sqlite3_stmt;
SQLITE_API int sqlite3_prepare_v2(
  sqlite3 *db,            
  const char *zSql,       
  int nByte,              
  sqlite3_stmt **ppStmt,  
  const char **pzTail     
);
SQLITE_API int sqlite3_column_count(sqlite3_stmt *pStmt);
SQLITE_API int sqlite3_step(sqlite3_stmt*);
#define SQLITE_INTEGER  1
#define SQLITE_FLOAT    2
#define SQLITE_BLOB     4
# define SQLITE_TEXT     3
SQLITE_API const void *sqlite3_column_blob(sqlite3_stmt*, int iCol);
SQLITE_API double sqlite3_column_double(sqlite3_stmt*, int iCol);
SQLITE_API sqlite3_int64 sqlite3_column_int64(sqlite3_stmt*, int iCol);
SQLITE_API const unsigned char *sqlite3_column_text(sqlite3_stmt*, int iCol);
SQLITE_API int sqlite3_column_bytes(sqlite3_stmt*, int iCol);
SQLITE_API int sqlite3_column_type(sqlite3_stmt*, int iCol);
SQLITE_API int sqlite3_finalize(sqlite3_stmt *pStmt);
SQLITE_API int sqlite3_deserialize(
  sqlite3 *db,            
  const char *zSchema,    
  unsigned char *pData,   
  sqlite3_int64 szDb,     
  sqlite3_int64 szBuf,    
  unsigned mFlags         
);
#define SQLITE_DESERIALIZE_FREEONCLOSE 1 
#define SQLITE_DESERIALIZE_RESIZEABLE  2 